# bookshelf

./: pyproject.toml
books/: models.py  urls.py  utils.py  views.py
books/migrations/: 0002_alter_book_unique_together.py
books/templates/books/: book.html  index.html  main.html
books/tests/: tests_models.py  tests_utils.py  tests_views.py
bookshelf/: urls.py
