[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = ""
authors = ["denis sergeevich pekshev <pekshev.ds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.3"

[tool.poetry.group.testers.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.linters.dependencies]
mypy = "^1.11.2"
flake8 = "^7.1.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bookshelf.settings"
# addopts = "--cov=books --cov-report=html --cov-branch --cov-fail-under=60 ."
# addopts = "--cov=books --cov-report=html --cov-fail-under=60 ."
# addopts = "--cov=books --cov-fail-under=60 ."
# addopts = "--cov=books ./books/tests/tests_utils.py"
# addopts = "--cov=books --cov-report=html --cov-branch --cov-fail-under=60 ./books/tests/tests_models.py"
addopts = "--cov=books ./books/tests/tests_models.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"